Adding new files for bug 77231 - find plugins using directory service. r=av/sr=waterson